<resources>
    <string name="app_name">Labs20211-Gr02</string>
    <string name="informacion_personal">Informacion personal</string>
    <string name="women">Mujer</string>
    <string name="men">Hombre</string>
    <string name="sex">Sexo:</string>
    <string name="date">Fecha de nacimiento:</string>
    <string name="next">Siguiente</string>
    <string name="last_name">Apellidos</string>
    <string name="name">Nombre</string>
    <string name="change">Cambiar</string>
    <string name="contact_info">Información de contacto</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="email">Email</string>
    <string name="country">País</string>
    <string name="city">Ciudad</string>
    <string-array name="study">
        <item>Grado de escolaridad</item>
        <item>primaria</item>
        <item>secundaria</item>
        <item>universidad</item>
        <item>otro</item>
    </string-array>

    <string-array name="countries_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guayana Francesa</item>
        <item>Granada</item>
        <item>Guatemala</item>
        <item>Guayana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Paraguay</item>
        <item>Panamá</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>República Dominicana</item>
        <item>Surinam</item>
        <item>Uruguay</item>
        <item>Venezuelaa</item>
    </string-array>
</resources>